# array__ops

./: Cargo.toml  README.md
.github/workflows/: build-docs.yml
src/: array_2d_ops.rs  array_ops.rs  form.rs  from_fn.rs  lib.rs  private.rs
src/future/: divide_and_conquer.rs  mod.rs
src/join/: actions.rs  actions_2d.rs  divide_and_conquer.rs  mod.rs  reduce.rs  runs.rs  runs_2d.rs  try_actions.rs  try_actions_2d.rs  try_runs.rs  try_runs_2d.rs
src/ops/: mod.rs
src/ops/_1d/: add.rs  add_assign.rs  argminmax.rs  argreduce.rs  bitand.rs  bitand_assign.rs  bitor.rs  bitor_assign.rs  bitxor.rs  bitxor_assign.rs  chain.rs  chunks.rs  differentiate.rs  div.rs  div_assign.rs  divide_and_conquer.rs  each.rs  enumerate.rs  enumerate_flatmap.rs  enumerate_for_each.rs  enumerate_map.rs  enumerate_map_assign.rs  enumerate_map_outer.rs  enumerate_meet.rs  enumerate_visit.rs  enumerate_zip_assign_with.rs  enumerate_zip_outer_with.rs  enumerate_zip_with.rs  extend.rs  find.rs  flatmap.rs  fold.rs  for_each.rs  from_collumn.rs  from_fn.rs  from_item.rs  initialize.rs  integrate.rs  into_matrix.rs  isolate.rs  (+45 more)
src/ops/_2d/: diagonal.rs  enumerate_zip_kronecker_with.rs  flatten.rs  join.rs  mod.rs  mul_kronecker.rs  transpose.rs  transpose_assign.rs  uncollumn.rs  zip_kronecker.rs  zip_kronecker_with.rs
src/ops/nd/: array_nd_ops.rs
src/private/: boxed_array.rs  mod.rs
src/private/guard/: mod.rs  partial_divide_and_conquer_guard.rs  partial_empty_guard.rs  partial_init_guard.rs  partial_map_guard.rs  partial_zip_empty_guard.rs  partial_zip_guard.rs
