[package]
name = "array__ops"
version = "0.1.20"
edition = "2021"
license = "MIT"
description = "A selection of useful array operations"
repository = "https://github.com/sigurd4/array__ops"
keywords = ["array", "util", "ops"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc"]
alloc = ["slice_ops/alloc"]
#std = ["alloc"]

[dependencies]
moddef = "0.2.6"
array_trait = "1.0.2"
slice_ops = "0.2.1"

[dev-dependencies]
tokio-test = "0.4.4"